--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,9 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
 
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+
     implementation 'com.android.support:cardview-v7:27.1.1'
 }
